spade-tests/src/snapshots/spade_tests__linear_check__unused_resource_causes_error.snap
---
source: spade-tests/src/linear_check.rs
---
entity x(resource: inv &bool) -> bool {
    true
}


error: resource is unused
  ┌─ testinput:1:10
  │
1 │ entity x(resource: inv &bool) -> bool {
  │          ^^^^^^^^ resource is unused
  │
  = note: resource is a ~& value which must be set
